perspective, fixed position, overflow row scroll whitespace no wrap

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,17 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  
+  
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +28,23 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  bottom: 5%;
+  min-height: 500px;
 }
 
 .controlColumn {
+  width: 50%;
+  
+}
+
+.perspectiveEffect{
+  position: fixed;
+  top: 60%;
+  height: 40%;
+  left: 0%;
+  width: 100%;
+  background-color: hsl(195deg, 20%, 86%);
 }
